--- a/#source/scss/recipes-center.scss
+++ b/#source/scss/recipes-center.scss
@@ -101,5 +101,142 @@
     }
 }
 
+.recipesslider.recipesslider__reccenter {
+    padding: 75px 0 60px;
+}
 
+.infosectwrap {
+    min-height: 325px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 25px;
 
+    .row {
+        position: relative;
+        z-index: 2;
+    }
+
+    .infosect__bg {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: 50% 50%;
+    }
+
+    .infosect__descr {
+        padding: 20px 20px 20px 120px;
+
+        h3 {
+            font-family: 'Poetsenone';
+            font-size: 40px;
+            line-height: 110%;
+            letter-spacing: 1.879px;
+            text-transform: uppercase;
+            color: #fff;
+            font-weight: 400;
+            margin-bottom: 20px;
+        }
+
+        p {
+            max-width: 400px;
+            color: #fff;
+            font-size: 15px;
+            font-weight: 500;
+            line-height: 150%;
+            margin-bottom: 35px;
+        }
+
+        a {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            min-height: 45px;
+            max-width: 226px;
+            border-radius: 40px;
+            border: 1.5px solid $white;
+            color: $white;
+            font-size: 15px;
+            font-weight: 600;
+            line-height: 100%;
+            transition: 0.3s;
+
+            &:hover {
+                background-color: $white;
+                color: $base-green;
+            }
+        }
+
+    }
+
+    .infosect__img {
+        height: 100%;
+        overflow: hidden;
+        padding-left: 70px;
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: 0 50%;
+        }
+    }
+}
+
+.recipesslider.recipesslider__video {
+    padding: 80px 0 0 0;
+
+    .productsection__header {
+        flex-wrap: wrap;
+        margin-bottom: 40px;
+
+        p {
+            margin-bottom: 25px;
+        }
+
+        .descr {
+            max-width: 440px;
+            margin-bottom: 0;
+            font-size: 17px;
+            font-weight: 400;
+            line-height: 150%;
+        }
+    }
+
+    .recipesslide {
+        border-radius: 10px;
+    }
+
+   
+
+    .recipesslide .recipesslide__title {
+        margin-bottom: 0;
+        font-size: 22px;
+    }
+
+    .recipesslide .recipesslide__descr {
+        padding-bottom: 25px;
+    }
+
+    .recipesslide .recipesslide__info {
+        margin-bottom: 25px;
+    }
+}
+
+.allrecipes {
+    padding: 60px 0 70px;
+
+    .productsection__header {
+        margin-bottom: 70px;
+    }
+
+    .recipesslide {
+        margin-bottom: 34px;
+    }
+
+    .pagination {
+        margin-top: 35px;
+    }
+}
